--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,16 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "php": "^8.0",
-        "filament/filament": "^3.0"
-    }
+        "php": "^8.1",
+        "filament/filament": "^3.0",
+        "filament/support": "^3.0",
+        "spatie/laravel-package-tools": "^1.15.0"
+    },
+    "authors": [
+        {
+            "name": "Ahmed Eid",
+            "email": "ahmed.m.eid.2001@gmail.com",
+            "role": "Developer"
+        }
+    ]
 }
